# quantitative-trading

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: api.md  data-sources.md  project-spec.md  recommendation-contract.md  trading-policy.md
docs/integrations/: eastmoney-miaoxiang-skills-install.md
scripts/: start-backend.sh
src/quantitative_trading/: cli.py  config.py  sanitization.py
src/web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
tests/: instrument_fixtures.py  planning_fixtures.py  test_account_models.py  test_account_repository.py  test_account_service.py  test_account_snapshot_job.py  test_api_account.py  test_api_auth.py  test_api_cash.py  test_api_datasource.py  test_api_email_deliveries.py  test_api_errors.py  test_api_feedback.py  test_api_instruments.py  test_api_market_read.py  test_api_market_snapshots.py  test_api_notifications_audit.py  test_api_plans.py  test_api_positions.py  test_api_recommendations.py  test_api_service.py  test_api_universe.py  test_api_uploads.py  test_api_watchlist.py  test_api_workflows.py  test_audit_service.py  test_cash_models.py  test_cash_repository.py  test_cash_service.py  test_cli.py  test_config.py  test_container_examples.py  test_datasource_credentials.py  test_decision_close_workflow.py  test_decision_engine.py  test_decision_factory.py  test_docs_examples.py  test_email_outbox.py  test_email_settings.py  test_feedback_service.py  (+44 more)
(+225 files in other folders)
