[project]
name = "quantitative-trading"
version = "0.1.0"
description = "Personal A-share short-term quantitative decision support system."
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.15,<2",
  "apscheduler>=3.10,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "typer>=0.12,<1",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
qt = "quantitative_trading.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
